[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Intro.gd" type="Script" id=1]
[ext_resource path="res://Textures/default-font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/LobbyGrid.gd" type="Script" id=3]
[ext_resource path="res://Scripts/LobbyTank.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.133333 )

[node name="Lobby" type="CanvasLayer"]
layer = 2

[node name="Intro" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Intro"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Intro/Panel"]
margin_left = 927.0
margin_top = 100.0
margin_right = 1079.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Intro/Panel"]
margin_left = 436.0
margin_top = 101.0
margin_right = 560.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 2 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Intro/Panel"]
margin_left = 218.0
margin_top = 99.0
margin_right = 352.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="LineEdit" parent="Intro/Panel"]
margin_left = 604.0
margin_top = 96.0
margin_right = 856.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 2 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="Intro/Panel"]
margin_left = 221.0
margin_top = 170.0
margin_right = 567.0
margin_bottom = 219.0
custom_fonts/font = ExtResource( 2 )

[node name="LobbyGrid" type="GridContainer" parent="Intro/Panel"]
margin_left = 141.0
margin_top = 223.0
margin_right = 352.0
margin_bottom = 390.0
columns = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Tank1" type="VBoxContainer" parent="Intro/Panel/LobbyGrid"]
margin_right = 211.0
margin_bottom = 167.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Intro/Panel/LobbyGrid/Tank1"]
margin_right = 211.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "Tank 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Driver" type="Button" parent="Intro/Panel/LobbyGrid/Tank1"]
margin_top = 53.0
margin_right = 211.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 2 )
text = "Driver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gunner" type="Button" parent="Intro/Panel/LobbyGrid/Tank1"]
margin_top = 112.0
margin_right = 211.0
margin_bottom = 167.0
custom_fonts/font = ExtResource( 2 )
text = "Gunner"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Intro/Panel/Start" to="Intro" method="_on_Start_pressed"]
[connection signal="pressed" from="Intro/Panel/Join" to="Intro" method="_on_Join_pressed"]
[connection signal="pressed" from="Intro/Panel/Host" to="Intro" method="_on_Host_pressed"]
[connection signal="pressed" from="Intro/Panel/LobbyGrid/Tank1/Driver" to="Intro/Panel/LobbyGrid/Tank1" method="_on_Driver_pressed"]
[connection signal="pressed" from="Intro/Panel/LobbyGrid/Tank1/Gunner" to="Intro/Panel/LobbyGrid/Tank1" method="_on_Gunner_pressed"]
